<resources>
    <string name="app_name">ctf</string>
    <string name="сurrencies">Currencies</string>
    <string name="dollar">$</string>
    <string name="euro">€</string>
    <string name="cny">¥</string>
    <string name="reload">reload</string>
    <string name="currency_name">Цифровой код:</string>
    <string name="test">Фунт стерлингов Соединенного королества</string>

    <string name="currency_value">USD</string>
    <string name="name">Валюта:</string>
    <string name="name_value">Доллар США</string>
    <string name="nominal_name">Единиц:</string>
    <string name="nominal_value">1</string>
    <string name="price_name">Курс:</string>
    <string name="price_value">89,62</string>
    <string name="ratio_price_value">+6,5</string>
    <string name="forward_right">forward_right</string>
    <string name="update_server_date">Последнее обновление базы данных:</string>
    <string name="time_update">25.02.2022, 22:00:00</string>
    <string name="start">(</string>
    <string name="finish">)</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_valuate">Выбранная Валюта:</string>
    <string name="unit_valuate">1</string>
    <string name="convert_valuate_value">64.32</string>
    <string name="close_button">close_button</string>
</resources>